src/objects/CourseCategory__c.object
<CustomObject>
    <description>used to drive behaviour in the custom agent console area of interest picklists</description>
    <fields>
        <fullName>CategoryLevel1__c</fullName>
        <description>as per the Monash course finder as at 5-9-13</description>
        <label>Study Area</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication and media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design, creative art, architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment and sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities and culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law, policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine, health, pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryLevel2__c</fullName>
        <description>as per the Monash course finder as at 5-9-13</description>
        <label>Detailed Study Area</label>
        <picklist>
            <picklistValues>
                <fullName>Aeronautical engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biological engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer systems engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechatronics engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp and paper technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuarial studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business information systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business strategy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CourseCode__c</fullName>
        <label>Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseName__c</fullName>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Alfred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caulfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gippsland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peninsula</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>for filtering to PT or FT options</description>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialisation__c</fullName>
        <description>Temporary field to capture new field value during transition to new course architecture</description>
        <label>Specialisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Categories</pluralLabel>
    <recordTypes>
        <fullName>Domestic</fullName>
        <active>true</active>
        <label>Domestic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>